typescript_app: add v2 utilityemissionchannel endpoints
